study java 16 finish